chore: misc cleanup for v1.0 release; updating styleguide patterns to use grid + wrapper object; hiding a bunch of patterns from the main PL styleguide page, renaming top level PL categories, minor CSS updates to styleguidekit all page; adding improved clean task to wipe empty folders + extra dependency dirs not getting wiped with current task

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "postbootstrap": "node scripts/monorepo-tests.js",
     "predeploy": "npm run build",
     "deploy": "./scripts/deploy.sh",
-    "clean:git": "git clean -xdf",
+    "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
     "clean:lerna": "lerna clean -Y",
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build",
