--- a/packages/components/brightcove-player/package.json
+++ b/packages/components/brightcove-player/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@bolt/components-brightcove-player",
-  "version": "0.1.0-beta.5",
-  "sourceFilesFrom": "0.9.6",
+  "version": "0.10.2",
   "main": "dist/brightcove-player.min.js",
   "module:dev": "src/brightcove-player.js",
   "style": "src/brightcove-player.scss",
@@ -24,12 +23,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-beta.4"
+    "@bolt/build-webpack": "^0.9.0"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1",
-    "@bolt/settings-all": "^0.7.4",
-    "@bolt/tools-all": "^0.5.4"
+    "@bolt/core": "^0.10.2",
+    "@bolt/settings-all": "^0.9.0",
+    "@bolt/tools-all": "^0.9.0",
+    "dasherize": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
