chore: folding in a bunch of misc v1.0 fixes prior to release

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -11,7 +11,8 @@
     "build:prod": "bolt build --prod",
     "serve": "bolt serve",
     "watch": "bolt watch",
-    "start": "bolt start"
+    "start": "bolt start",
+    "start:prod": "bolt start --prod"
   },
   "repository": {
     "type": "git",
