--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 - npm run setup
 
 script:
-- travis_wait npm run build && npm run deploy
+- travis_wait npm run build && npm run deploy && node ./scripts/netlify-notifier.js
 #- travis_wait npm run build && npm run deploy # only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 
 cache:
