--- a/package.json
+++ b/package.json
@@ -22,16 +22,13 @@
   "scripts": {
     "start": "echo 'To start up a server and watches, head into any of the folders in the apps/ directory, then run npm start there.' && echo 'If you want to start Pattern Lab, run this:' && echo '' && echo 'cd apps/pattern-lab' && echo 'npm start'",
     "setup": "npm run bootstrap && npm run composer",
-
     "build:pl": "cd apps/pattern-lab && npm run build:prod",
     "build:bolt-site": "cd apps/bolt-site && npm run build:prod",
     "build:example-drupal-theme": "cd apps/example_drupal_theme && npm run build:prod",
     "build": "npm-run-all --serial build:*",
-
     "composer:pl": "cd apps/pattern-lab && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer:bolt-site": "cd apps/bolt-site && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer": "npm-run-all --serial composer:*",
-
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "node scripts/monorepo-tests.js",
     "predeploy": "npm run build",
@@ -64,6 +61,7 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "lerna": "^2.5.1",
+    "node-fetch": "^2.0.0",
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0"
   },
