Update SVG Icons in `@bolt/icons` Component; Add Workaround Temp Build (#473)
* fix: update handful of existing icons that are rendering incorrectly due to masks and hidden rectangles in SVG source

* chore: add missing SVG icons from 0.x branch

* refactor: add temporary build process to handle SVG icons sub-build in Bolt; update schema prop values to match actual icons in the folder that are available; add temporary standalone watch task to rebuild when icon source files change

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build:pl": "cd apps/pattern-lab && npm run build:prod",
     "build:bolt-site": "cd apps/bolt-site && npm run build:prod",
     "build:example-drupal-theme": "cd apps/example_drupal_theme && npm run build:prod",
+    "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --serial build:*",
 
     "composer:pl": "cd apps/pattern-lab && rm -rf vendor composer.lock && composer install --no-interaction",
@@ -33,14 +34,16 @@
     "composer": "npm-run-all --serial composer:*",
 
     "bootstrap": "lerna bootstrap --reject-cycles",
-    "postbootstrap": "node scripts/monorepo-tests.js",
+    "postbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
     "predeploy": "npm run build",
     "deploy": "./scripts/deploy.sh",
     "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
     "clean:lerna": "lerna clean -Y",
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build",
-    "snyk-protect": "snyk protect"
+    "snyk-protect": "snyk protect",
+
+    "watch:icons": "lerna exec --scope @bolt/components-icons -- npm run watch"
   },
   "config": {
     "validate-commit-msg": {
