--- a/packages/components/bolt-icons/package.json
+++ b/packages/components/bolt-icons/package.json
@@ -7,8 +7,8 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.2.0-beta.3",
   "sourceFilesFrom": "0.10.2",
+  "version": "0.10.2",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -24,7 +24,26 @@
   },
   "dependencies": {
     "@bolt/core": "^0.5.0-beta.1",
-    "uppercamelcase": "^3.0.0"
+    "@bolt/babel-preset-bolt": "^0.0.1-beta.1",
+    "babel-cli": "^6.26.0",
+    "camelcase": "^4.1.0",
+    "cheerio": "^1.0.0-rc.2",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.2",
+    "ncp": "^2.0.0",
+    "path": "^0.12.7",
+    "prettier": "^1.7.4",
+    "svgo": "^0.7.2",
+    "uppercamelcase": "^3.0.0",
+    "nodemon": "^1.15.1"
   },
-  "main": "src/index.js"
+  "main": "dist/index.js",
+  "module": "dist/index.es6.js",
+  "jsnext:main": "dist/index.es6.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon -e svg --watch src/svgs --exec npm run build",
+    "postbootstrap": "npm run build",
+    "build": "node ./build-icons.js && babel src --out-dir dist --ignore src/svgs --quiet"
+  }
 }
