--- a/apps/pattern-lab/config/config.yml
+++ b/apps/pattern-lab/config/config.yml
@@ -51,6 +51,7 @@ lineageMatchKey: 3
 patternExtension: twig
 twigExtensions:
     - '\PatternLab\DrupalTwigExtensions\Basic'
+    - '\BasaltInc\TwigTools\TwigExtensions\BasaltFakerExtension'
     - '\Bolt\TwigExtensions\BoltCore'
     - '\Bolt\TwigExtensions\BoltExtras'
 twigDebug: true
