--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -33,6 +33,7 @@
     "@bolt/components-critical-fonts": "0.5.0-beta.5",
     "@bolt/components-device-viewer": "0.2.0-beta.6",
     "@bolt/components-figure": "0.2.0-beta.2",
+    "@bolt/components-form": "0.2.0-beta.2",
     "@bolt/components-icon": "0.4.0-beta.5",
     "@bolt/components-headline": "0.7.0-beta.2",
     "@bolt/components-image": "0.4.0-beta.6",
