fix: fixing video player version number dependencies

--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   "workspaces": [
     "packages/components/background-shapes",
     "packages/components/button",
+    "packages/components/brightcove-player",
+    "packages/components/bolt-video",
     "packages/components/color-swatch",
     "packages/components/page-footer",
     "packages/components/bolt-action-blocks",
