--- a/apps/bolt-site/package.json
+++ b/apps/bolt-site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/website",
-  "version": "0.5.3",
+  "version": "1.0.0-rc.1",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -18,36 +18,36 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/build-tools": "0.5.1",
-    "@bolt/core": "0.5.0-beta.1",
-    "@bolt/global": "0.5.0",
-    "@bolt/components-action-blocks": "0.3.0",
-    "@bolt/components-background": "0.3.0-beta.2",
-    "@bolt/components-background-shapes": "0.1.0-beta.2",
-    "@bolt/components-band": "0.6.0-beta.5",
-    "@bolt/components-blockquote": "0.2.4",
-    "@bolt/components-breadcrumb": "0.0.0",
-    "@bolt/components-button": "0.7.0-beta.5",
-    "@bolt/components-button-group": "0.2.0",
-    "@bolt/components-card": "0.6.0-beta.5",
-    "@bolt/components-chip": "0.2.0",
-    "@bolt/components-chip-list": "0.2.0",
-    "@bolt/components-device-viewer": "0.2.0-beta.6",
-    "@bolt/components-figure": "0.2.0-beta.2",
-    "@bolt/components-icon": "0.4.0-beta.5",
-    "@bolt/components-headline": "0.7.0-beta.2",
-    "@bolt/components-image": "0.4.0-beta.6",
-    "@bolt/components-link": "0.2.1",
-    "@bolt/components-logo": "0.3.0-beta.5",
-    "@bolt/components-nav-bar": "0.1.0-beta.5",
-    "@bolt/components-ordered-list": "0.1.4",
-    "@bolt/components-page-footer": "0.4.0",
-    "@bolt/components-page-header": "0.0.3-beta.4",
-    "@bolt/components-site": "0.5.0",
-    "@bolt/components-smooth-scroll": "0.1.0-beta.4",
-    "@bolt/components-sticky": "0.1.0-beta.4",
-    "@bolt/components-teaser": "0.2.0",
-    "@bolt/components-unordered-list": "0.1.2",
+    "@bolt/build-tools": "^1.0.0-rc.1",
+    "@bolt/components-action-blocks": "^1.0.0-rc.1",
+    "@bolt/components-background": "^1.0.0-rc.1",
+    "@bolt/components-background-shapes": "^1.0.0-rc.1",
+    "@bolt/components-band": "^1.0.0-rc.1",
+    "@bolt/components-blockquote": "^1.0.0-rc.1",
+    "@bolt/components-breadcrumb": "^1.0.0-rc.1",
+    "@bolt/components-button": "^1.0.0-rc.1",
+    "@bolt/components-button-group": "^1.0.0-rc.1",
+    "@bolt/components-card": "^1.0.0-rc.1",
+    "@bolt/components-chip": "^1.0.0-rc.1",
+    "@bolt/components-chip-list": "^1.0.0-rc.1",
+    "@bolt/components-device-viewer": "^1.0.0-rc.1",
+    "@bolt/components-figure": "^1.0.0-rc.1",
+    "@bolt/components-headline": "^1.0.0-rc.1",
+    "@bolt/components-icon": "^1.0.0-rc.1",
+    "@bolt/components-image": "^1.0.0-rc.1",
+    "@bolt/components-link": "^1.0.0-rc.1",
+    "@bolt/components-logo": "^1.0.0-rc.1",
+    "@bolt/components-nav-bar": "^1.0.0-rc.1",
+    "@bolt/components-ordered-list": "^1.0.0-rc.1",
+    "@bolt/components-page-footer": "^1.0.0-rc.1",
+    "@bolt/components-page-header": "^1.0.0-rc.1",
+    "@bolt/components-site": "^1.0.0-rc.1",
+    "@bolt/components-smooth-scroll": "^1.0.0-rc.1",
+    "@bolt/components-sticky": "^1.0.0-rc.1",
+    "@bolt/components-teaser": "^1.0.0-rc.1",
+    "@bolt/components-unordered-list": "^1.0.0-rc.1",
+    "@bolt/core": "^1.0.0-rc.1",
+    "@bolt/global": "^1.0.0-rc.1",
     "broken-link-checker": "^0.7.7"
   }
 }
