--- a/packages/components/bolt-critical-fonts/package.json
+++ b/packages/components/bolt-critical-fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-critical-fonts",
-  "version": "0.5.0-beta.5",
+  "version": "1.0.0-rc.1",
   "description": "Async critical path font loader",
   "repository": {
     "type": "git",
@@ -16,9 +16,9 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "dependencies": {
-    "@bolt/components-headline": "0.7.0-beta.2",
-    "@bolt/global": "0.5.0",
-    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/components-headline": "^1.0.0-rc.1",
+    "@bolt/core": "^1.0.0-rc.1",
+    "@bolt/global": "^1.0.0-rc.1",
     "fontfaceobserver": "^2.0.13"
   },
   "publishConfig": {
