--- a/packages/components/bolt-image/package.json
+++ b/packages/components/bolt-image/package.json
@@ -9,7 +9,7 @@
     "component",
     "image"
   ],
-  "version": "0.4.0-beta.6",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.10.2",
   "maintainers": [
     {
@@ -39,7 +39,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/core": "^1.0.0-rc.1",
     "lazysizes": "^4.0.0-rc4"
   }
 }
