--- a/packages/components/bolt-nav-bar/package.json
+++ b/packages/components/bolt-nav-bar/package.json
@@ -8,7 +8,7 @@
     "design system",
     "components"
   ],
-  "version": "0.1.0-beta.5",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.10.2",
   "maintainers": [
     {
@@ -38,7 +38,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1",
+    "@bolt/core": "^1.0.0-rc.1",
     "gumshoejs": "^3.5.0"
   }
 }
