--- a/packages/components/bolt-sticky/package.json
+++ b/packages/components/bolt-sticky/package.json
@@ -8,7 +8,7 @@
     "design system",
     "components"
   ],
-  "version": "0.1.0-beta.4",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.10.0",
   "maintainers": [
     {
