--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -10,8 +10,8 @@
 		"design system",
 		"components"
 	],
-	"version": "0.1.0-beta.5",
-  "sourceFilesFrom": "0.10.2",
+	"version": "1.0.0-rc.1",
+	"sourceFilesFrom": "0.10.2",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -40,7 +40,7 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/components-brightcove-player": "0.10.2",
-		"@bolt/core": "0.5.0-beta.1"
+		"@bolt/components-brightcove-player": "^1.0.0-rc.1",
+		"@bolt/core": "^1.0.0-rc.1"
 	}
 }
