--- a/packages/components/bolt-background/package.json
+++ b/packages/components/bolt-background/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.3.0-beta.2",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.2",
   "maintainers": [
     {
@@ -36,7 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1",
-    "@bolt/components-background-shapes": "0.1.0-beta.2"
+    "@bolt/components-background-shapes": "^1.0.0-rc.1",
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
