--- a/packages/components/bolt-band/package.json
+++ b/packages/components/bolt-band/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@bolt/components-band",
-  "version": "0.6.0-beta.5",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.8",
   "description": "Band Component in Bolt",
   "main": "src/band.js",
   "style": "src/band.scss",
-  "twig": ["src/band.twig"],
+  "twig": [
+    "src/band.twig"
+  ],
   "keywords": [
     "bolt design system",
     "bolt",
@@ -38,6 +40,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
