--- a/packages/components/bolt-breadcrumb/package.json
+++ b/packages/components/bolt-breadcrumb/package.json
@@ -8,7 +8,7 @@
     "design system",
     "components"
   ],
-  "version": "0.0.0",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.0.0",
   "maintainers": [
     {
@@ -37,6 +37,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
