--- a/packages/components/bolt-card/package.json
+++ b/packages/components/bolt-card/package.json
@@ -8,7 +8,7 @@
     "design system",
     "components"
   ],
-  "version": "0.6.0-beta.5",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.10.2",
   "maintainers": [
     {
@@ -41,6 +41,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
