--- a/packages/components/bolt-chip-list/package.json
+++ b/packages/components/bolt-chip-list/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.2.0",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
@@ -36,7 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-chip": "^0.2.0",
-    "@bolt/global": "0.5.0"
+    "@bolt/components-chip": "^1.0.0-rc.1",
+    "@bolt/global": "^1.0.0-rc.1"
   }
 }
