--- a/packages/components/bolt-chip/package.json
+++ b/packages/components/bolt-chip/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.2.0",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.0",
   "maintainers": [
     {
@@ -36,6 +36,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
