--- a/packages/components/bolt-figure/package.json
+++ b/packages/components/bolt-figure/package.json
@@ -10,8 +10,8 @@
 		"design system",
 		"components"
 	],
-	"version": "0.2.0-beta.2",
-  "sourceFilesFrom": "0.9.0",
+	"version": "1.0.0-rc.1",
+	"sourceFilesFrom": "0.9.0",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -39,6 +39,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/core": "0.5.0-beta.1"
+		"@bolt/core": "^1.0.0-rc.1"
 	}
 }
