--- a/packages/components/bolt-headline/package.json
+++ b/packages/components/bolt-headline/package.json
@@ -7,7 +7,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.7.0-beta.2",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
@@ -27,6 +27,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
