--- a/packages/components/bolt-icons/package.json
+++ b/packages/components/bolt-icons/package.json
@@ -8,7 +8,7 @@
     "design system"
   ],
   "sourceFilesFrom": "0.10.2",
-  "version": "0.10.2",
+  "version": "1.0.0-rc.1",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -23,17 +23,17 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1",
-    "@bolt/babel-preset-bolt": "^0.0.1-beta.1",
+    "@bolt/babel-preset-bolt": "^1.0.0-rc.1",
+    "@bolt/core": "^1.0.0-rc.1",
     "babel-cli": "^6.26.0",
     "camelcase": "^4.1.0",
     "cheerio": "^1.0.0-rc.2",
     "glob": "^7.1.2",
     "ncp": "^2.0.0",
+    "nodemon": "^1.15.1",
     "prettier": "^1.7.4",
     "svgo": "^0.7.2",
-    "uppercamelcase": "^3.0.0",
-    "nodemon": "^1.15.1"
+    "uppercamelcase": "^3.0.0"
   },
   "main": "dist/index.js",
   "module": "dist/index.es6.js",
