--- a/packages/components/bolt-logo/package.json
+++ b/packages/components/bolt-logo/package.json
@@ -13,7 +13,7 @@
     "image",
     "logo"
   ],
-  "version": "0.3.0-beta.5",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.8",
   "maintainers": [
     {
@@ -41,7 +41,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1",
-    "@bolt/components-image": "^0.4.0-beta.6"
+    "@bolt/components-image": "^1.0.0-rc.1",
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
