--- a/packages/components/bolt-ordered-list/package.json
+++ b/packages/components/bolt-ordered-list/package.json
@@ -8,8 +8,8 @@
 		"design system",
 		"components"
 	],
-	"version": "0.1.4",
-  "sourceFilesFrom": "0.9.0",
+	"version": "1.0.0-rc.1",
+	"sourceFilesFrom": "0.9.0",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -36,6 +36,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/core": "^0.5.0-beta.1"
+		"@bolt/core": "^1.0.0-rc.1"
 	}
 }
