--- a/packages/components/bolt-page-header/package.json
+++ b/packages/components/bolt-page-header/package.json
@@ -7,7 +7,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.0.3-beta.4",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
@@ -24,6 +24,6 @@
   },
   "style": "src/_page-header.scss",
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   }
 }
