--- a/packages/components/bolt-smooth-scroll/package.json
+++ b/packages/components/bolt-smooth-scroll/package.json
@@ -8,7 +8,7 @@
     "design system",
     "component"
   ],
-  "version": "0.1.0-beta.4",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.5",
   "maintainers": [
     {
