--- a/packages/components/brightcove-player/package.json
+++ b/packages/components/brightcove-player/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-brightcove-player",
-  "version": "0.10.2",
+  "version": "1.0.0-rc.1",
   "main": "src/brightcove-player.js",
   "style": "src/brightcove-player.scss",
   "jest": {
@@ -22,7 +22,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/core": "^1.0.0-rc.1",
     "dasherize": "^2.0.0"
   },
   "publishConfig": {
