--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -11,7 +11,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.7.0-beta.5",
+  "version": "1.0.0-rc.1",
   "sourceFilesFrom": "0.9.8",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
@@ -27,7 +27,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1"
+    "@bolt/core": "^1.0.0-rc.1"
   },
   "scripts": {}
 }
