--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/babel-preset-bolt",
-  "version": "0.0.1-beta.1",
+  "version": "1.0.0-rc.1",
   "description": "Babel preset shared across the Bolt Design System",
   "author": {
     "name": "Salem Ghoweri",
