--- a/packages/config-presets/config-browserlist/package.json
+++ b/packages/config-presets/config-browserlist/package.json
@@ -7,7 +7,7 @@
     "config",
     "bolt design system"
   ],
-  "version": "0.3.1",
+  "version": "1.0.0-rc.1",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
