--- a/packages/config-presets/config-stylelint/package.json
+++ b/packages/config-presets/config-stylelint/package.json
@@ -5,7 +5,7 @@
     "stylelint",
     "stylelint-config"
   ],
-  "version": "0.4.2",
+  "version": "1.0.0-rc.1",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
