--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/global",
   "description": "Global styles for Bolt Design System",
-  "version": "0.5.0",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "main": "styles/index.js",
   "style": "styles/index.scss",
@@ -14,7 +14,7 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/core": "^1.0.0-rc.1",
     "normalize-scss": "^7.0.0"
   },
   "files": [
