--- a/package.json
+++ b/package.json
@@ -168,7 +168,8 @@
     "xo": "^0.18.2"
   },
   "devDependencies": {
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "node-fetch": "^2.0.0"
   },
   "snyk": true,
   "lint-staged": {
