Adding easy PL compile command

--- a/apps/pattern-lab/composer.json
+++ b/apps/pattern-lab/composer.json
@@ -69,7 +69,7 @@
     },
     "scripts": {
         "server": "php core/console --server",
-        "generate": "php core/console --generate",
+        "build": "php -d memory_limit=4048M core/console --generate",
         "watch": "php core/console --watch",
         "start": "php core/console --server --quiet & php core/console --watch",
         "post-install-cmd": [
