Changing PL homepage to Components All

--- a/apps/pattern-lab/config/config.yml
+++ b/apps/pattern-lab/config/config.yml
@@ -24,7 +24,7 @@ styleGuideExcludes: ''
 cacheBusterOn: 'true'
 publicDir: ../../www/pattern-lab/
 sourceDir: src
-defaultPattern: pages-bolt-homepage
+defaultPattern: viewall-components-all
 defaultShowPatternInfo: false
 ishMinimum: '240'
 ishMaximum: '2600'
