--- a/packages/components/bolt-form/package.json
+++ b/packages/components/bolt-form/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@bolt/core": "0.5.0-beta.1"
+    "@bolt/core": "1.0.0-rc.3"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
