Updating forms version from 0.0.0 to 1.0.0-rc.3

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -33,7 +33,7 @@
     "@bolt/components-chip-list": "^1.0.0-rc.3",
     "@bolt/components-critical-fonts": "^1.0.0-rc.3",
     "@bolt/components-device-viewer": "^1.0.0-rc.3",
-    "@bolt/components-form": "0.0.0",
+    "@bolt/components-form": "1.0.0-rc.3",
     "@bolt/components-figure": "^1.0.0-rc.3",
     "@bolt/components-headline": "^1.0.0-rc.3",
     "@bolt/components-icon": "^1.0.0-rc.3",
