--- a/packages/components/bolt-form/package.json
+++ b/packages/components/bolt-form/package.json
@@ -7,7 +7,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.0.0",
+  "version": "1.0.0-rc.3",
   "sourceFilesFrom": "0.0.0",
   "author": "Remy Denton",
   "homepage": "https://boltdesignsystem.com",
