add video component to patternlab

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -48,6 +48,7 @@
     "@bolt/components-sticky": "^1.0.0-rc.3",
     "@bolt/components-teaser": "^1.0.0-rc.3",
     "@bolt/components-unordered-list": "^1.0.0-rc.3",
+    "@bolt/components-video": "^1.0.0-rc.3",
     "@bolt/core": "^1.0.0-rc.3",
     "@bolt/global": "^1.0.0-rc.3"
   }
