--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -41,6 +41,7 @@
 	},
 	"dependencies": {
 		"@bolt/components-brightcove-player": "^1.0.0-rc.3",
+    "@bolt/components-button": "^1.0.0-rc.3",
 		"@bolt/core": "^1.0.0-rc.3"
 	}
 }
