--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -37,5 +37,8 @@
     "shudrum/array-finder": "^1.1",
     "gregwar/image": "^2.0",
     "ksubileau/color-thief-php": "^1.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7"
   }
 }
