--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
+    "jest": "^22.4.0",
     "lerna": "^2.5.1",
     "node-fetch": "^2.0.0",
     "npm-run-all": "^4.1.2",
