--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build",
     "snyk-protect": "snyk protect",
-
+    "test": "npm run test:js && npm run test:php",
+    "test:js": "jest --testPathIgnorePatterns 'sandbox' --testPathIgnorePatterns 'brightcove-player.test.js'",
+    "test:php": "cd packages/core-php && ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests",
     "watch:icons": "lerna exec --scope @bolt/components-icons -- npm run watch"
   },
   "config": {
