--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -41,5 +41,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^7"
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests"
   }
 }
