--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -43,6 +43,6 @@
     "phpunit/phpunit": "^7"
   },
   "scripts": {
-    "test": "phpunit tests"
+    "test": "phpunit --colors=always tests"
   }
 }
