--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build",
     "snyk-protect": "snyk protect",
-    "test:js": "jest --testPathIgnorePatterns 'sandbox' --testPathIgnorePatterns 'brightcove-player.test.js'",
+    "test:js": "jest",
+    "test:js:watch": "jest --watch",
     "test:php": "cd packages/core-php && composer run test",
     "test": "npm-run-all --serial test:*",
     "watch:icons": "lerna exec --scope @bolt/components-icons -- npm run watch"
