chore: upgrade babel core + babel preset env

--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -13,7 +13,6 @@
     ]
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -29,7 +28,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^v7.0.0-beta.40",
   },
   "keywords": [
     "babel",
