--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -22,7 +22,6 @@
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -31,6 +30,8 @@
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.40",
     "@babel/plugin-syntax-decorators": "^7.0.0-beta.40",
     "@babel/preset-env": "^v7.0.0-beta.40",
+    "@babel/plugin-syntax-export-default-from": "^v7.0.0-beta.40",
+    "@babel/plugin-proposal-export-default-from": "^v7.0.0-beta.40"
   },
   "keywords": [
     "babel",
