--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -13,23 +13,20 @@
     ]
   },
   "dependencies": {
-    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "@babel/core": "^7.0.0-beta.40",
+    "@babel/plugin-transform-classes": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.40",
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.40",
+    "@babel/plugin-syntax-class-properties": "^7.0.0-beta.40",
     "@babel/plugin-syntax-decorators": "^7.0.0-beta.40",
     "@babel/preset-env": "^v7.0.0-beta.40",
+    "@babel/plugin-syntax-dynamic-import": "^v7.0.0-beta.40",
     "@babel/plugin-syntax-export-default-from": "^v7.0.0-beta.40",
     "@babel/plugin-proposal-export-default-from": "^v7.0.0-beta.40"
   },
