--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -17,7 +17,6 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/plugin-transform-classes": "^7.0.0-beta.40",
@@ -25,6 +24,8 @@
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.40",
     "@babel/plugin-syntax-class-properties": "^7.0.0-beta.40",
     "@babel/plugin-syntax-decorators": "^7.0.0-beta.40",
+    "@babel/plugin-syntax-jsx": "^7.0.0-beta.40",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.40",
     "@babel/preset-env": "^v7.0.0-beta.40",
     "@babel/plugin-syntax-dynamic-import": "^v7.0.0-beta.40",
     "@babel/plugin-syntax-export-default-from": "^v7.0.0-beta.40",
