fix: updating Webpack babel loader (needed for @babel version bump); updating web component polyfill versions; disabling IE 11 polyfills not currently needed; upgrading polyfill loader to provide more specific web component polyfills based on exactly what the browser requires

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "@webcomponents/custom-elements": "^1.0.8",
-    "@webcomponents/html-imports": "^1.1.1",
     "@webcomponents/shadycss": "^1.1.1",
-    "@webcomponents/shadydom": "^1.0.12",
+    "@webcomponents/shadydom": "github:muan/shadydom#qsa",
     "@webcomponents/template": "^1.2.2",
     "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^1.1.0",
