--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -28,7 +28,7 @@
     "@theme-tools/sass-export-data": "^1.0.3",
     "@theme-tools/sass-import-globbing": "^1.0.0",
     "autoprefixer": "^7.2.4",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.0-beta.2",
     "browser-sync": "^2.23.5",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
