Tighten Up `@bolt\components-icons` Build Process (#498)
* refactor: partially upgrading Bolt Icons build process to no longer require transpiling via Babel; upgrade build script to use async await

* chore: updating pre-compiled SVGs based on upgraded icon build script

* Path string concat to path.join()

* Reformatting main build function to approach we use that isn't self-invoking functions. Adding try catch block and messages for success and errors

* Refactoring icon build process

* SVGs should keep the viewBox attribute

* Fresh build of icons

--- a/packages/components/bolt-icons/package.json
+++ b/packages/components/bolt-icons/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@bolt/components-icons",
   "keywords": [
-    "eyeglass-module",
     "bolt design system",
     "bolt",
+    "SVG Icons",
     "ui toolkit",
     "design system"
   ],
@@ -23,25 +23,22 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/babel-preset-bolt": "^1.0.0-rc.3",
     "@bolt/core": "^1.0.0-rc.3",
-    "babel-cli": "^6.26.0",
     "camelcase": "^4.1.0",
     "cheerio": "^1.0.0-rc.2",
-    "glob": "^7.1.2",
-    "ncp": "^2.0.0",
+    "globby": "^8.0.1",
     "nodemon": "^1.15.1",
     "prettier": "^1.7.4",
-    "svgo": "^0.7.2",
-    "uppercamelcase": "^3.0.0"
+    "svgo": "^1.0.5",
+    "uppercamelcase": "^3.0.0",
+    "fs-extra": "^5.0.0"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.es6.js",
-  "jsnext:main": "dist/index.es6.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon -e svg --watch src/svgs --exec npm run build",
+    "postinstall": "npm run build",
     "postbootstrap": "npm run build",
-    "build": "node ./build-icons.js && babel src --out-dir dist --ignore src/svgs --quiet"
+    "build": "node ./build-icons.js "
   }
 }
