Share -- Added base files/assets for new component within PL and the new component package

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -44,6 +44,7 @@
     "@bolt/components-ordered-list": "^1.0.0-rc.3",
     "@bolt/components-page-footer": "^1.0.0-rc.3",
     "@bolt/components-page-header": "^1.0.0-rc.3",
+    "@bolt/components-share": "^1.0.0-rc.3",
     "@bolt/components-site": "^1.0.0-rc.3",
     "@bolt/components-smooth-scroll": "^1.0.0-rc.3",
     "@bolt/components-sticky": "^1.0.0-rc.3",
