--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-footer",
     "packages/components/bolt-page-header",
+    "packages/components/bolt-share",
     "packages/components/bolt-site",
     "packages/components/bolt-smooth-scroll",
     "packages/components/bolt-sticky",
