refactor: update icon component to automatically check color contrast when passing data to SVG icons; add fallback logic for browsers not support CSS variables.

--- a/packages/components/bolt-icon/package.json
+++ b/packages/components/bolt-icon/package.json
@@ -24,8 +24,10 @@
     "access": "public"
   },
   "dependencies": {
+    "uppercamelcase": "^3.0.0",
     "@bolt/components-icons": "^1.0.0-rc.3",
-    "@bolt/core": "^1.0.0-rc.3"
+    "@bolt/core": "^1.0.0-rc.3",
+    "pubsub-js": "^1.6.0"
   },
   "main": "src/icon.js",
   "style": "src/icon.scss",
