WIP - stashing accordion work

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "workspaces": [
     "packages/components/bolt-action-blocks",
+    "packages/components/bolt-accordion",
     "packages/components/bolt-background-shapes",
     "packages/components/bolt-background",
     "packages/components/bolt-band",
