--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -36,6 +36,7 @@
     "commander": "^2.12.2",
     "convert-hrtime": "^2.0.0",
     "css-loader": "^0.28.10",
+    "raw-loader": "^0.5.1",
     "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.8",
