test: testing out update to subtree split command (now including tags)

--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt/core-php",
+  "name": "bolt-design-system/core-php",
   "description": "Core PHP functionality for Bolt",
   "version": "0.9.0",
   "type": "library",
