--- a/apps/pattern-lab/composer.json
+++ b/apps/pattern-lab/composer.json
@@ -46,7 +46,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-      "bolt/core-php": "^0.9.0",
+      "bolt-design-system/core-php": "^0.9.0",
       "php": ">=7.0",
       "twig/twig": "^1.35.0",
       "cweagans/composer-patches": "~1.0",
