--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -27,7 +27,7 @@
     }
   },
   "require": {
-    "bolt/core-php": "^0.9.0",
+    "bolt-design-system/core-php": "^0.9.0",
     "twig/twig": "^1.0",
     "basaltinc/twig-tools": "^1.3.2",
     "michelf/php-markdown": "^1.8.0",
