Adding "schema" key to all packages package.json - also doing cleanup on those files

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -7,10 +7,7 @@
   "bin": {
     "bolt": "index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pega-digital/bolt.git"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/build-tools",
   "keywords": [
     "bolt",
     "bolt design system",
@@ -66,5 +63,8 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "schema": "utils/config.schema.yml",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
+  "homepage": "https://bolt-design-system.com"
 }
