--- a/packages/components/bolt-background/package.json
+++ b/packages/components/bolt-background/package.json
@@ -21,22 +21,17 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-background",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "style": "src/background.scss",
-  "twig": "src/background.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/components-background-shapes": "^1.0.0-rc.3",
     "@bolt/core": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "background.schema.yml"
 }
