--- a/packages/components/bolt-band/package.json
+++ b/packages/components/bolt-band/package.json
@@ -5,9 +5,6 @@
   "description": "Band Component in Bolt",
   "main": "src/band.js",
   "style": "src/band.scss",
-  "twig": [
-    "src/band.twig"
-  ],
   "keywords": [
     "bolt design system",
     "bolt",
@@ -27,19 +24,15 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-band",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "band.schema.yml"
 }
