--- a/packages/components/bolt-brightcove-player/package.json
+++ b/packages/components/bolt-brightcove-player/package.json
@@ -27,5 +27,8 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-brightcove-player",
+  "homepage": "https://bolt-design-system.com"
 }
