--- a/packages/components/bolt-critical-fonts/package.json
+++ b/packages/components/bolt-critical-fonts/package.json
@@ -2,13 +2,8 @@
   "name": "@bolt/components-critical-fonts",
   "version": "1.0.0-rc.3",
   "description": "Async critical path font loader",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-critical-fonts",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "keywords": [
     "design",
     "system"
@@ -25,5 +20,6 @@
     "access": "public"
   },
   "main": "src/critical-fonts.js",
-  "style": "src/critical-fonts.scss"
+  "style": "src/critical-fonts.scss",
+  "homepage": "https://bolt-design-system.com"
 }
