--- a/packages/components/bolt-teaser/package.json
+++ b/packages/components/bolt-teaser/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@bolt/components-teaser",
-  "type": "pattern",
   "description": "Teaser Component",
   "keywords": [
     "eyeglass-module",
@@ -12,21 +11,16 @@
   "version": "1.0.0-rc.3",
   "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-component-button"
-  },
-  "bugs": {
-    "url": "https://github.com/pega-digital/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-teaser",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "style": "src/teaser.scss",
-  "twig": "src/teaser.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "teaser.schema.yml"
 }
