--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -32,5 +32,8 @@
   ],
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/config-presets/babel-preset-bolt",
+  "homepage": "https://bolt-design-system.com"
 }
