--- a/packages/components/bolt-action-blocks/package.json
+++ b/packages/components/bolt-action-blocks/package.json
@@ -22,17 +22,12 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-action-blocks",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "style": "src/action-blocks.scss",
-  "twig": "src/action-blocks.twig",
+  "schema": "action-blocks.schema.yml",
   "publishConfig": {
     "access": "public"
   },
