--- a/packages/components/bolt-background-shapes/package.json
+++ b/packages/components/bolt-background-shapes/package.json
@@ -2,7 +2,6 @@
   "name": "@bolt/components-background-shapes",
   "description": "Background Component Shapes in Bolt",
   "style": "src/background-shapes.scss",
-  "twig": "src/background-shapes.twig",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -28,19 +27,15 @@
       "web": "https://github.com/remydenton"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-background-shapes",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "background-shapes.schema.yml"
 }
