--- a/packages/components/bolt-button-group/package.json
+++ b/packages/components/bolt-button-group/package.json
@@ -22,21 +22,16 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-button-group",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "style": "src/button-group.scss",
-  "twig": "src/button-group.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "button-group.schema.yml"
 }
