--- a/packages/components/bolt-card/package.json
+++ b/packages/components/bolt-card/package.json
@@ -22,25 +22,16 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-card",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "style": "src/card.scss",
-  "twig": [
-    "src/card.twig",
-    "src/card-w-teaser.twig",
-    "src/card-w-teaser-list.twig"
-  ],
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "card.schema.yml"
 }
