--- a/packages/components/bolt-chip-list/package.json
+++ b/packages/components/bolt-chip-list/package.json
@@ -22,21 +22,16 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
-  "twig": "chip-list.twig",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-chip-list",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/components-chip": "^1.0.0-rc.3",
     "@bolt/global": "^1.0.0-rc.3"
-  }
+  },
+  "schema": "chip-list.schema.yml"
 }
