--- a/packages/components/bolt-icon/package.json
+++ b/packages/components/bolt-icon/package.json
@@ -11,15 +11,10 @@
   "version": "1.0.0-rc.3",
   "sourceFilesFrom": "0.10.2",
   "author": "Salem Ghoweri",
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pega-digital/bolt"
-  },
-  "bugs": {
-    "url": "https://github.com/pega-digital/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-icon",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "publishConfig": {
     "access": "public"
   },
@@ -31,5 +26,5 @@
   },
   "main": "src/icon.js",
   "style": "src/icon.scss",
-  "twig": "src/icon.twig"
+  "schema": "icon.schema.yml"
 }
