--- a/packages/components/bolt-image/package.json
+++ b/packages/components/bolt-image/package.json
@@ -23,23 +23,18 @@
       "web": "http://mikemai.net/"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-image",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "style": "src/image.scss",
   "main": "src/image.js",
-  "twig": "src/image.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.3",
     "lazysizes": "^4.0.0-rc4"
-  }
+  },
+  "schema": "image.schema.yml"
 }
