--- a/packages/components/bolt-page-footer/package.json
+++ b/packages/components/bolt-page-footer/package.json
@@ -5,5 +5,9 @@
   "sourceFilesFrom": "0.9.0",
   "license": "MIT",
   "private": true,
-  "style": "_page-footer.scss"
+  "style": "_page-footer.scss",
+  "schema": "page-footer.schema.yml",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-page-footer",
+  "homepage": "https://bolt-design-system.com"
 }
