--- a/packages/components/bolt-site/package.json
+++ b/packages/components/bolt-site/package.json
@@ -11,15 +11,10 @@
   "version": "1.0.0-rc.3",
   "sourceFilesFrom": "0.9.0",
   "author": "Salem Ghoweri",
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pega-digital/bolt/tree/master/packages/bolt-component-button"
-  },
-  "bugs": {
-    "url": "https://github.com/pega-digital/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-site",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "publishConfig": {
     "access": "public"
   },
