--- a/packages/components/bolt-sticky/package.json
+++ b/packages/components/bolt-sticky/package.json
@@ -27,22 +27,17 @@
       "web": "https://github.com/remydenton"
     }
   ],
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-sticky",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "main": "src/sticky.js",
   "style": "src/sticky.scss",
-  "twig": "src/sticky.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "stickybits": "^2.0.13"
-  }
+  },
+  "schema": "sticky.schema.yml"
 }
