--- a/packages/config-presets/config-browserlist/package.json
+++ b/packages/config-presets/config-browserlist/package.json
@@ -9,15 +9,10 @@
   ],
   "version": "1.0.0-rc.3",
   "author": "Salem Ghoweri",
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/config-browserlist"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/config-presets/config-browserlist",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "publishConfig": {
     "access": "public"
   }
