--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,10 +5,7 @@
   "license": "MIT",
   "main": "index.js",
   "style": "styles/index.scss",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/core",
   "dependencies": {
     "@webcomponents/custom-elements": "^1.0.8",
     "@webcomponents/shadycss": "^1.1.1",
@@ -26,5 +23,7 @@
     "sassy-maps": "github:at-import/Sassy-Maps#0.x.x",
     "skatejs": "^5.1.1",
     "yocss": "^0.5.1"
-  }
+  },
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
+  "homepage": "https://bolt-design-system.com"
 }
