--- a/packages/twig-extensions/package.json
+++ b/packages/twig-extensions/package.json
@@ -8,15 +8,10 @@
   ],
   "version": "0.4.0-beta.0",
   "author": "Salem Ghoweri",
-  "homepage": "https://boltdesignsystem.com",
+  "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt"
-  },
-  "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
-  },
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/twig-extensions",
+  "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "dependencies": {
     "colors": "^1.1.2",
     "exec-php": "0.0.3",
