--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt/core-php",
+  "name": "bolt-design-system/core-php",
   "description": "Core PHP functionality for Bolt",
   "version": "0.9.0",
   "type": "library",
@@ -27,7 +27,7 @@
     }
   },
   "require": {
-    "bolt/core-php": "^0.9.0",
+    "bolt-design-system/core-php": "^0.9.0",
     "twig/twig": "^1.0",
     "basaltinc/twig-tools": "^1.3.4",
     "michelf/php-markdown": "^1.8.0",
