--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -26,6 +26,7 @@
     "@bolt/components-band": "^1.0.0-rc.3",
     "@bolt/components-blockquote": "^1.0.0-rc.3",
     "@bolt/components-breadcrumb": "^1.0.0-rc.3",
+    "@bolt/components-brightcove-player": "^1.0.0-rc.3",
     "@bolt/components-button": "^1.0.0-rc.3",
     "@bolt/components-button-group": "^1.0.0-rc.3",
     "@bolt/components-card": "^1.0.0-rc.3",
