--- a/packages/components/bolt-form/package.json
+++ b/packages/components/bolt-form/package.json
@@ -7,7 +7,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0-rc.4",
   "sourceFilesFrom": "0.0.0",
   "author": "Remy Denton",
   "homepage": "https://bolt-design-system.com",
@@ -19,9 +19,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@bolt/core": "1.0.0-rc.3"
+    "@bolt/core": "^1.0.0-rc.4"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
