update @bolt/critical-fonts to 0.9.6 (#438)

--- a/packages/components/bolt-critical-fonts/package.json
+++ b/packages/components/bolt-critical-fonts/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bolt/components-critical-fonts",
+  "sourceFilesFrom": "0.9.6",
   "version": "1.0.0-rc.6",
   "description": "Async critical path font loader",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-critical-fonts",
