--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "packages/components/bolt-background-shapes",
     "packages/components/bolt-background",
     "packages/components/bolt-band",
+    "packages/components/bolt-block-list",
     "packages/components/bolt-blockquote",
     "packages/components/bolt-breadcrumb",
     "packages/components/bolt-brightcove-player",
