--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "packages/components/bolt-button-group",
     "packages/components/bolt-button",
     "packages/components/bolt-card",
+    "packages/components/bolt-collapse",
     "packages/components/bolt-chip-list",
     "packages/components/bolt-chip",
     "packages/components/bolt-critical-fonts",
