--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,9 @@
     "es6-promise": "^4.1.1",
     "hyperhtml": "^2.5.10",
     "preact": "^8.2.7",
+    "preact-compat": "^3.18.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sassy-maps": "github:at-import/Sassy-Maps#0.x.x",
     "skatejs": "^5.1.1",
     "yocss": "^0.5.1"
