Tooltip - NEW component initial work / commit

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "packages/components/bolt-smooth-scroll",
     "packages/components/bolt-sticky",
     "packages/components/bolt-teaser",
+    "packages/components/bolt-tooltip",
     "packages/components/bolt-unordered-list",
     "packages/components/bolt-video",
     "packages/core",
