--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -50,6 +50,7 @@
     "@bolt/components-smooth-scroll": "^1.0.0-rc.3",
     "@bolt/components-sticky": "^1.0.0-rc.3",
     "@bolt/components-teaser": "^1.0.0-rc.3",
+    "@bolt/components-tooltip": "^1.0.0-rc.3",
     "@bolt/components-unordered-list": "^1.0.0-rc.3",
     "@bolt/core": "^1.0.0-rc.3",
     "@bolt/global": "^1.0.0-rc.3"
