WIP - stashing latest

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "@bolt/build-tools": "^1.0.0-rc.3",
     "@bolt/components-action-blocks": "^1.0.0-rc.3",
-    "@bolt/components-accordion": "^1.0.0-rc.3",
     "@bolt/components-collapse": "0.0.0",
+    "@bolt/components-dropdown": "0.0.0",
     "@bolt/components-background": "^1.0.0-rc.3",
     "@bolt/components-background-shapes": "^1.0.0-rc.3",
     "@bolt/components-band": "^1.0.0-rc.3",
